force-app/main/default/objects/Opportunity/fields/Approx_Service_TimeFlow__c.field-meta.xml
<CustomField>
    <fullName>Approx_Service_TimeFlow__c</fullName>
    <label>Approx Service Time Flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>