force-app/main/default/objects/Opportunity/fields/Approximate_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Service_Time__c</fullName>
    <label>Approximate Service Time</label>
    <summarizedField>OpportunityLineItem.Service_Duration_Minutes__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>