force-app/main/default/objects/Opportunity/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <formula>Billing_Amount_Before_Membership_Discoun__c - ( Billing_Amount_Before_Membership_Discoun__c * Membership_Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>