force-app/main/default/objects/Opportunity/fields/Billing_Amount_Before_Membership_Discoun__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount_Before_Membership_Discoun__c</fullName>
    <label>Billing Amount Before Membership Discoun</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>