force-app/main/default/objects/Opportunity/fields/Billing_Amount_Flow__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount_Flow__c</fullName>
    <label>Billing Amount Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>