force-app/main/default/objects/Opportunity/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Service Appointments (Opportunities)</relationshipLabel>
    <relationshipName>Service_Appointments_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>