force-app/main/default/objects/Opportunity/fields/Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>