force-app/main/default/objects/Opportunity/fields/Membership_Discount__c.field-meta.xml
<CustomField>
    <fullName>Membership_Discount__c</fullName>
    <formula>CASE( TEXT(Customer__r.Membership_Type__c) ,&quot;Silver&quot;, 0.05, &quot;Gold&quot;, 0.10,&quot;Platinum&quot;,0.15,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>