force-app/main/default/objects/Opportunity/fields/Payment_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>