force-app/main/default/objects/Opportunity/fields/Service_Count__c.field-meta.xml
<CustomField>
    <fullName>Service_Count__c</fullName>
    <label>Service Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>