force-app/main/default/objects/Opportunity/fields/Service_Count_Flow__c.field-meta.xml
<CustomField>
    <fullName>Service_Count_Flow__c</fullName>
    <label>Service Count Flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>