force-app/main/default/objects/Opportunity/fields/Total_Amount_Without_Product_Disc__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Without_Product_Disc__c</fullName>
    <inlineHelpText>Represents Total Amount of the services without applying individual service discounts</inlineHelpText>
    <label>Total Amount Without Product Disc</label>
    <summarizedField>OpportunityLineItem.Total_Without_Discount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>