force-app/main/default/objects/Opportunity/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula>( Total_Amount_Without_Product_Disc__c -  Billing_Amount__c )/ Total_Amount_Without_Product_Disc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Discount including individual service discount and membership discount</inlineHelpText>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>