force-app/main/default/objects/Opportunity/fields/Total_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Time__c</fullName>
    <formula>(  End_Date_Time__c - Start_Date_Time__c  ) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>