force-app/main/default/objects/Opportunity/recordTypes/Online_Booking.recordType-meta.xml
<RecordType>
    <fullName>Online_Booking</fullName>
    <active>true</active>
    <businessProcess>Stage</businessProcess>
    <label>Online Booking</label>
</RecordType>