force-app/main/default/objects/Opportunity/recordTypes/Walk_in_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Walk_in_Appointment</fullName>
    <active>true</active>
    <businessProcess>Stage</businessProcess>
    <label>Walk-in Appointment</label>
</RecordType>