force-app/main/default/objects/Opportunity/validationRules/Appointment_Inactive_Salon.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Inactive_Salon</fullName>
    <active>true</active>
    <description>Appointment cannot be booked for an Inactive Salon.</description>
    <errorConditionFormula>ISPICKVAL( Account.Active__c , &quot;Inactive&quot;) = TRUE</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Appointment cannot be booked for an Inactive Salon.</errorMessage>
</ValidationRule>