force-app/main/default/objects/Opportunity/validationRules/End_Time_Earlier.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Earlier</fullName>
    <active>true</active>
    <description>End Date Time cannot be earlier than Start Date Time.</description>
    <errorConditionFormula>End_Date_Time__c &lt;  Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End Date Time cannot be earlier than Start Date Time.</errorMessage>
</ValidationRule>