force-app/main/default/objects/Opportunity/validationRules/Stage_Booked_or_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Booked_or_greater</fullName>
    <active>false</active>
    <description>Stage cannot be Booked unless at least one Service has been added.</description>
    <errorConditionFormula>Service_Count__c = 0 &amp;&amp;  OR( ISPICKVAL( StageName , &quot;Booked&quot;) ,ISPICKVAL( StageName , &quot;In Progress&quot;),ISPICKVAL( StageName , &quot;Completed&quot;))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Stage cannot be Booked ,Inprogress or completed unless at least one Service has been added.</errorMessage>
</ValidationRule>