force-app/main/default/objects/Opportunity/validationRules/Stage_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Complete</fullName>
    <active>false</active>
    <description>Stage cannot be Completed unless End Date Time is entered.</description>
    <errorConditionFormula>ISBLANK(  End_Date_Time__c )   &amp;&amp;   ISPICKVAL( StageName , &quot;Completed&quot;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Stage cannot be Completed unless End Date Time is entered.</errorMessage>
</ValidationRule>