force-app/main/default/objects/Opportunity/validationRules/Stage_InProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_InProgress</fullName>
    <active>false</active>
    <description>Stage cannot be In Progress unless Start Date Time is populated.</description>
    <errorConditionFormula>ISBLANK( Start_Date_Time__c )   &amp;&amp;   ISPICKVAL( StageName , &quot;In Progress&quot;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Stage cannot be In Progress unless Start Date Time is populated.</errorMessage>
</ValidationRule>