force-app/main/default/objects/Opportunity/listViews/Cancelled_Appointments.listView-meta.xml
<ListView>
    <fullName>Cancelled_Appointments</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Appointments</label>
</ListView>