force-app/main/default/objects/Opportunity/listViews/Completed_Appointments.listView-meta.xml
<ListView>
    <fullName>Completed_Appointments</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Billing_Amount__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Appointments</label>
</ListView>